--- a/app/src/main/res/layout/home_page_operatore_ecologico.xml
+++ b/app/src/main/res/layout/home_page_operatore_ecologico.xml
@@ -68,6 +68,7 @@
             android:layout_marginRight="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:background="#000000"
             app:layout_constraintTop_toBottomOf="@id/textView2"
             >
 
