--- a/app/src/main/res/layout/activity_toast_custom_view.xml
+++ b/app/src/main/res/layout/activity_toast_custom_view.xml
@@ -4,20 +4,31 @@
     android:layout_height="match_parent"
 
     android:orientation="horizontal"
-    android:background="#A300FF00"
     android:padding="10dp">
 
-    <ImageView
-        android:id="@+id/customToastImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/sent_mail" />
+
+    <android.support.v7.widget.CardView
+
+        android:layout_width="200dp"
+        android:layout_height="55dp"
+        android:layout_above="@id/navigationView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="20dp"
+        android:clickable="true"
+        android:background="@android:color/transparent"
+        android:onClick="avviso">
 
     <TextView
         android:id="@+id/customToastText"
         android:layout_width="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_height="wrap_content"
         android:text="Segnalazione inviata"
         android:textSize="20dp" />
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
