--- a/app/src/main/res/layout/identifica_tipologia_rifiuto.xml
+++ b/app/src/main/res/layout/identifica_tipologia_rifiuto.xml
@@ -28,16 +28,19 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="68dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="96dp"
-            android:textAlignment="center"
-            android:layout_marginLeft="96dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginLeft="36dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="23dp"
+            android:layout_marginRight="23dp"
             android:layout_marginBottom="8dp"
-            android:text="Avvisi"
+            android:layout_toEndOf="@+id/back"
+            android:layout_toRightOf="@+id/back"
+            android:text="Identifica Tipologia Rifiuto"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="22sp"
             android:textStyle="bold|italic" />
@@ -56,12 +59,18 @@
     </RelativeLayout>
 
 
-
+    <LinearLayout
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:layout_width="0px"
+        android:layout_height="0px"/>
     <SearchView
         android:id="@+id/searchBar"
         android:layout_below="@id/relative"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:nextFocusUp="@id/searchBar"
+        android:nextFocusLeft="@id/searchBar"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -114,6 +123,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:background="#000000"
+        android:onClick="onQrClick"
         app:layout_constraintTop_toBottomOf="@id/inquadraText"
         android:layout_below="@id/inquadraText"
         >
@@ -123,7 +133,14 @@
             android:id="@+id/scanner_fragment"
 
             android:layout_width="250dp"
-            android:layout_height="120dp" />
+            android:layout_height="120dp" >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Premi per attivare"
+            android:textColor="#FFFFFF"/>
+
+        </FrameLayout>
 
 
 
