--- a/app/src/main/res/layout/result_prodotto.xml
+++ b/app/src/main/res/layout/result_prodotto.xml
@@ -1,39 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    >
-
-<LinearLayout
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/elementWrapper"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="2dp"
+    android:background="#000000"
+    android:padding="2dp">
 
-    android:id="@+id/elementWrapper">
-    <ImageButton
-        android:id="@+id/elem_lista_foto"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/background_holo_light"
+            android:layout_marginBottom="1dp"
+            android:paddingBottom="1dp">
 
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        />
+            <TextView
+                android:id="@+id/elem_lista_nome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/background_holo_light"
+                android:text="Prova"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="18sp" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/background_holo_light">
+
+            <ImageView
+                android:id="@+id/elem_lista_foto"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_gravity="end"
+                android:layout_marginBottom="5dp"
+                android:adjustViewBounds="true"
+                android:foregroundGravity="right"
+                android:scaleType="fitCenter"
+                android:src="@drawable/plastica_result"
+                />
+        </TableRow>
 
 
-    <Button
-        android:id="@+id/elem_lista_nome"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
 
-        android:textAllCaps="false"
-        android:textSize="22dp" />
 
-     
-
-</LinearLayout>
-
-</LinearLayout>
+</TableLayout>
